--- a/src/pages/staffing.astro
+++ b/src/pages/staffing.astro
@@ -14,7 +14,7 @@ import Header from "../components/Header.astro";
     </div>
     <div class="mx-auto max-w-8xl px-6 lg:px-8">
         <div class="mx-auto max-w-2xl lg:mx-0">
-          <h1 class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-5xl">Staffing</h1>
+          <h1 class="mt-2 text-3xl font-bold tracking-tight text-white sm:text-5xl">Staffing</h1>
           <p class="mt-6 text-xl leading-8 text-gray-700">TecPlus drives innovation by providing cutting-edge software solutions. Our focus on design systems, product development, and API platform development has earned us recognition in the tech industry across the United States.</p>
         </div>
         <div class="mx-auto mt-16 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 lg:mx-0 lg:mt-10 lg:max-w-none lg:grid-cols-12">
@@ -27,44 +27,44 @@ import Header from "../components/Header.astro";
               </defs>
               <rect width="100%" height="100%" stroke-width="0" fill="url(#e87443c8-56e4-4c20-9111-55b82fa704e3)" />
             </svg>
-            <figure class="border-l border-indigo-600 pl-8">
-              <blockquote class="text-xl font-semibold leading-8 tracking-tight text-gray-900">
+            <figure class="border-l border-primary pl-8">
+              <blockquote class="text-xl font-semibold leading-8 tracking-tight text-white">
                 <p>“TecPlus has been a game changer in our software development. They've empowered us with cutting-edge technologies that have helped accelerate our digital transformation journey.”</p>
               </blockquote>
               <figcaption class="mt-8 flex gap-x-4">
                 <img src="https://images.unsplash.com/photo-1502685104226-ee32379fefbe?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="" class="mt-1 h-10 w-10 flex-none rounded-full bg-gray-50">
                 <div class="text-sm leading-6">
-                  <div class="font-semibold text-gray-900">John Doe</div>
-                  <div class="text-gray-600">@johndoe</div>
+                  <div class="font-semibold text-white">John Doe</div>
+                  <div class="text-white">@johndoe</div>
                 </div>
               </figcaption>
             </figure>
           </div>
           <div class="max-w-xl text-base leading-7 text-gray-700 lg:col-span-7">
             <p>We bring a unique approach to software development, combining our expertise in UX/UI design, open source software, and a range of technologies including Node.js, React, TypeScript, and GraphQL.</p>
-            <ul role="list" class="mt-8 max-w-xl space-y-8 text-gray-600">
+            <ul role="list" class="mt-8 max-w-xl space-y-8 text-white">
               <li class="flex gap-x-3">
-                <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                <svg class="mt-1 h-5 w-5 flex-none text-primary" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                   <path fill-rule="evenodd" d="M5.5 17a4.5 4.5 0 01-1.44-8.765 4.5 4.5 0 018.302-3.046 3.5 3.5 0 014.504 4.272A4 4 0 0115 17H5.5zm3.75-2.75a.75.75 0 001.5 0V9.66l1.95 2.1a.75.75 0 101.1-1.02l-3.25-3.5a.75.75 0 00-1.1 0l-3.25 3.5a.75.75 0 101.1 1.02l1.95-2.1v4.59z" clip-rule="evenodd" />
                 </svg>
-                <span><strong class="font-semibold text-gray-900">API Development.</strong> We build robust and scalable APIs to ensure your applications are always running at their best.</span>
+                <span><strong class="font-semibold text-white">API Development.</strong> We build robust and scalable APIs to ensure your applications are always running at their best.</span>
               </li>
               <li class="flex gap-x-3">
-                <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                <svg class="mt-1 h-5 w-5 flex-none text-primary" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                   <path fill-rule="evenodd" d="M10 1a4.5 4.5 0 00-4.5 4.5V9H5a2 2 0 00-2 2v6a2 2 0 002 2h10a2 2 0 002-2v-6a2 2 0 00-2-2h-.5V5.5A4.5 4.5 0 0010 1zm3 8V5.5a3 3 0 10-6 0V9h6z" clip-rule="evenodd" />
                 </svg>
-                <span><strong class="font-semibold text-gray-900">UX/UI Design.</strong> Our design teams create user-centric designs, ensuring your software solutions are both functional and aesthetically pleasing.</span>
+                <span><strong class="font-semibold text-white">UX/UI Design.</strong> Our design teams create user-centric designs, ensuring your software solutions are both functional and aesthetically pleasing.</span>
               </li>
               <li class="flex gap-x-3">
-                <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                <svg class="mt-1 h-5 w-5 flex-none text-primary" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                   <path d="M4.632 3.533A2 2 0 016.577 2h6.846a2 2 0 011.945 1.533l1.976 8.234A3.489 3.489 0 0016 11.5H4c-.476 0-.93.095-1.344.267l1.976-8.234z" />
                   <path fill-rule="evenodd" d="M4 13a2 2 0 100 4h12a2 2 0 100-4H4zm11.24 2a.75.75 0 01.75-.75H16a.75.75 0 01.75.75v.01a.75.75 0 01-.75.75h-.01a.75.75 0 01-.75-.75V15zm-2.25-.75a.75.75 0 00-.75.75v.01c0 .414.336.75.75.75H13a.75.75 0 00.75-.75V15a.75.75 0 00-.75-.75h-.01z" clip-rule="evenodd" />
                 </svg>
-                <span><strong class="font-semibold text-gray-900">Software Testing.</strong> We ensure your application's stability with our comprehensive software testing and quality assurance services.</span>
+                <span><strong class="font-semibold text-white">Software Testing.</strong> We ensure your application's stability with our comprehensive software testing and quality assurance services.</span>
               </li>
             </ul>
             <p class="mt-8">At Tec Plus, we believe in delivering software solutions that not only meet but exceed your expectations. We strive to provide unparalleled customer service and state-of-the-art technology in every project we undertake.</p>
-            <h2 class="mt-16 text-2xl font-bold tracking-tight text-gray-900">Solutions tailored to your needs</h2>
+            <h2 class="mt-16 text-2xl font-bold tracking-tight text-white">Solutions tailored to your needs</h2>
             <p class="mt-6">We understand that every business is unique. That's why we tailor our software solutions to suit your specific business requirements. Whether you need a simple mobile app or a complex web-based system, we have the skills and expertise to deliver a solution that works for you.</p>
           </div>
         </div>
@@ -93,14 +93,14 @@ import Header from "../components/Header.astro";
               <blockquote class="mt-6 text-xl font-semibold leading-8 text-white">
                 <p>“Amet amet eget scelerisque tellus sit neque faucibus non eleifend. Integer eu praesent at a. Ornare arcu gravida natoque erat et cursus tortor.”</p>
               </blockquote>
-              <figcaption class="mt-6 text-sm leading-6 text-gray-300"><strong class="font-semibold text-white">Judith Rogers,</strong> CEO at Workcation</figcaption>
+              <figcaption class="mt-6 text-sm leading-6 text-white"><strong class="font-semibold text-white">Judith Rogers,</strong> CEO at Workcation</figcaption>
             </figure>
           </div>
         </div>
         <div>
             <div class="text-base leading-7 text-gray-700 lg:max-w-lg">
-              <p class="text-base font-semibold leading-7 text-indigo-600">Company values</p>
-              <h1 class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Building Next-Gen Tech Solutions</h1>
+              <p class="text-base font-semibold leading-7 text-primary">Company values</p>
+              <h1 class="mt-2 text-3xl font-bold tracking-tight text-white sm:text-4xl">Building Next-Gen Tech Solutions</h1>
               <div class="max-w-xl">
                 <p class="mt-6">TecPlus is focused on empowering businesses with innovative tech solutions. We believe that technology has the power to transform every aspect of our lives and we are committed to making this transformation possible for businesses.</p>
                 <p class="mt-8">Our team of experts collaborates with businesses to understand their challenges and offers customized solutions to help them overcome these hurdles. We leverage state-of-the-art technologies to build scalable, robust, and efficient solutions for our clients.</p>
@@ -109,24 +109,24 @@ import Header from "../components/Header.astro";
             </div>
             <dl class="mt-10 grid grid-cols-2 gap-8 border-t border-gray-900/10 pt-10 sm:grid-cols-4">
               <div>
-                <dt class="text-sm font-semibold leading-6 text-gray-600">Founded</dt>
-                <dd class="mt-2 text-3xl font-bold leading-10 tracking-tight text-gray-900">2020</dd>
+                <dt class="text-sm font-semibold leading-6 text-white">Founded</dt>
+                <dd class="mt-2 text-3xl font-bold leading-10 tracking-tight text-white">2020</dd>
               </div>
               <div>
-                <dt class="text-sm font-semibold leading-6 text-gray-600">Employees</dt>
-                <dd class="mt-2 text-3xl font-bold leading-10 tracking-tight text-gray-900">80</dd>
+                <dt class="text-sm font-semibold leading-6 text-white">Employees</dt>
+                <dd class="mt-2 text-3xl font-bold leading-10 tracking-tight text-white">80</dd>
               </div>
               <div>
-                <dt class="text-sm font-semibold leading-6 text-gray-600">Countries</dt>
-                <dd class="mt-2 text-3xl font-bold leading-10 tracking-tight text-gray-900">15</dd>
+                <dt class="text-sm font-semibold leading-6 text-white">Countries</dt>
+                <dd class="mt-2 text-3xl font-bold leading-10 tracking-tight text-white">15</dd>
               </div>
               <div>
-                <dt class="text-sm font-semibold leading-6 text-gray-600">Raised</dt>
-                <dd class="mt-2 text-3xl font-bold leading-10 tracking-tight text-gray-900">$50M</dd>
+                <dt class="text-sm font-semibold leading-6 text-white">Raised</dt>
+                <dd class="mt-2 text-3xl font-bold leading-10 tracking-tight text-white">$50M</dd>
               </div>
             </dl>
             <div class="mt-10 flex">
-              <a href="#" class="text-base font-semibold leading-7 text-indigo-600">Learn more about TecPlus <span aria-hidden="true">&rarr;</span></a>
+              <a href="#" class="text-base font-semibold leading-7 text-primary">Learn more about TecPlus <span aria-hidden="true">&rarr;</span></a>
             </div>
           </div>
           
