--- a/src/components/Logos.astro
+++ b/src/components/Logos.astro
@@ -10,7 +10,7 @@ const logos = [
 ]
 ---
 
-<section class=" position-relative mx-auto ">
+<section class="bg-white position-relative max-w-2xl mx-auto ">
     <div class="  px-3">
        <div class="row">
           <div class="col">
