--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -39,8 +39,8 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 				</div>
 				<div class="bg-white px-6 pb-32 lg:px-8">
 					<div class="mx-auto max-w-3xl text-base leading-7 text-gray-700">
-						<p class="text-base font-semibold leading-7 text-indigo-600">Introducing</p>
-						<h1 class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">{title}</h1>
+						<p class="text-base font-semibold leading-7 text-primary">Introducing</p>
+						<h1 class="mt-2 text-3xl font-bold tracking-tight text-white sm:text-4xl">{title}</h1>
 						<FormattedDate date={pubDate} />
 						{
 							updatedDate && (
