--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -42,8 +42,8 @@ const posts = (await getCollection('blog')).sort(
 				<div class="bg-white py-24 sm:py-32">
 					<div class="mx-auto max-w-8xl px-6 lg:px-8">
 					  <div class="mx-auto max-w-2xl lg:max-w-4xl">
-						<h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Featured Insights</h2>
-						<p class="mt-2 text-lg leading-8 text-gray-600">Learn how to grow your business with our expert advice.</p>
+						<h2 class="text-3xl font-bold tracking-tight text-white sm:text-4xl">Featured Insights</h2>
+						<p class="mt-2 text-lg leading-8 text-white">Learn how to grow your business with our expert advice.</p>
 						<div class="mt-16 space-y-20 lg:mt-20 lg:space-y-20">
 							{posts.map((post) => (
 
@@ -54,26 +54,26 @@ const posts = (await getCollection('blog')).sort(
 							</div>
 							<div>
 							  <div class="flex items-center gap-x-4 text-xs">
-								<time datetime="2020-03-16" class="text-gray-500">Mar 16, 2020</time>
-								<a href="#" class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100">Marketing</a>
+								<time datetime="2020-03-16" class="text-white">Mar 16, 2020</time>
+								<a href="#" class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-white hover:bg-gray-100">Marketing</a>
 							  </div>
 							  <div class="group relative max-w-xl">
-								<h3 class="mt-3 text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
+								<h3 class="mt-3 text-lg font-semibold leading-6 text-white group-hover:text-white">
 									<a href={`/blog/${post.slug}/`}>{post.data.title}</a>
 								</h3>
-								<p class="mt-5 text-sm leading-6 text-gray-600">Illo sint voluptas. Error voluptates culpa eligendi. Hic vel totam vitae illo. Non aliquid explicabo necessitatibus unde. Sed exercitationem placeat consectetur nulla deserunt vel iusto corrupti dicta laboris incididunt.</p>
+								<p class="mt-5 text-sm leading-6 text-white">Illo sint voluptas. Error voluptates culpa eligendi. Hic vel totam vitae illo. Non aliquid explicabo necessitatibus unde. Sed exercitationem placeat consectetur nulla deserunt vel iusto corrupti dicta laboris incididunt.</p>
 							  </div>
 							  <div class="mt-6 flex border-t border-gray-900/5 pt-6">
 								<div class="relative flex items-center gap-x-4">
 								  <img src="https://images.unsplash.com/photo-1519244703995-f4e0f30006d5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="" class="h-10 w-10 rounded-full bg-gray-50">
 								  <div class="text-sm leading-6">
-									<p class="font-semibold text-gray-900">
+									<p class="font-semibold text-white">
 									  <a href="#">
 										<span class="absolute inset-0"></span>
 										Michael Foster
 									  </a>
 									</p>
-									<p class="text-gray-600">Co-Founder / CTO</p>
+									<p class="text-white">Co-Founder / CTO</p>
 								  </div>
 								</div>
 							  </div>
