--- a/src/pages/uxui.astro
+++ b/src/pages/uxui.astro
@@ -14,7 +14,7 @@ import Header from "../components/Header.astro";
     </div>
     <div class="mx-auto max-w-8xl px-6 lg:px-8">
       <div class="mx-auto max-w-2xl lg:mx-0">
-        <h1 class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-5xl">UX/UI</h1>
+        <h1 class="mt-2 text-3xl font-bold tracking-tight text-white sm:text-5xl">UX/UI</h1>
         <p class="mt-6 text-xl leading-8 text-gray-700">Aliquet nec orci mattis amet quisque ullamcorper neque, nibh sem. At arcu, sit dui mi, nibh dui, diam eget aliquam. Quisque id at vitae feugiat egestas ac. Diam nulla orci at in viverra scelerisque eget. Eleifend egestas fringilla sapien.</p>
       </div>
       <div class="mx-auto mt-16 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 lg:mx-0 lg:mt-10 lg:max-w-none lg:grid-cols-12">
@@ -27,44 +27,44 @@ import Header from "../components/Header.astro";
             </defs>
             <rect width="100%" height="100%" stroke-width="0" fill="url(#e87443c8-56e4-4c20-9111-55b82fa704e3)" />
           </svg>
-          <figure class="border-l border-indigo-600 pl-8">
-            <blockquote class="text-xl font-semibold leading-8 tracking-tight text-gray-900">
+          <figure class="border-l border-primary pl-8">
+            <blockquote class="text-xl font-semibold leading-8 tracking-tight text-white">
               <p>“Vel ultricies morbi odio facilisi ultrices accumsan donec lacus purus. Lectus nibh ullamcorper ac dictum justo in euismod. Risus aenean ut elit massa. In amet aliquet eget cras. Sem volutpat enim tristique.”</p>
             </blockquote>
             <figcaption class="mt-8 flex gap-x-4">
               <img src="https://images.unsplash.com/photo-1502685104226-ee32379fefbe?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="" class="mt-1 h-10 w-10 flex-none rounded-full bg-gray-50">
               <div class="text-sm leading-6">
-                <div class="font-semibold text-gray-900">Brenna Goyette</div>
-                <div class="text-gray-600">@brenna</div>
+                <div class="font-semibold text-white">Brenna Goyette</div>
+                <div class="text-white">@brenna</div>
               </div>
             </figcaption>
           </figure>
         </div>
         <div class="max-w-xl text-base leading-7 text-gray-700 lg:col-span-7">
           <p>Faucibus commodo massa rhoncus, volutpat. Dignissim sed eget risus enim. Mattis mauris semper sed amet vitae sed turpis id. Id dolor praesent donec est. Odio penatibus risus viverra tellus varius sit neque erat velit. Faucibus commodo massa rhoncus, volutpat. Dignissim sed eget risus enim. Mattis mauris semper sed amet vitae sed turpis id.</p>
-          <ul role="list" class="mt-8 max-w-xl space-y-8 text-gray-600">
+          <ul role="list" class="mt-8 max-w-xl space-y-8 text-white">
             <li class="flex gap-x-3">
-              <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <svg class="mt-1 h-5 w-5 flex-none text-primary" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                 <path fill-rule="evenodd" d="M5.5 17a4.5 4.5 0 01-1.44-8.765 4.5 4.5 0 018.302-3.046 3.5 3.5 0 014.504 4.272A4 4 0 0115 17H5.5zm3.75-2.75a.75.75 0 001.5 0V9.66l1.95 2.1a.75.75 0 101.1-1.02l-3.25-3.5a.75.75 0 00-1.1 0l-3.25 3.5a.75.75 0 101.1 1.02l1.95-2.1v4.59z" clip-rule="evenodd" />
               </svg>
-              <span><strong class="font-semibold text-gray-900">Push to deploy.</strong> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.</span>
+              <span><strong class="font-semibold text-white">Push to deploy.</strong> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.</span>
             </li>
             <li class="flex gap-x-3">
-              <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <svg class="mt-1 h-5 w-5 flex-none text-primary" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                 <path fill-rule="evenodd" d="M10 1a4.5 4.5 0 00-4.5 4.5V9H5a2 2 0 00-2 2v6a2 2 0 002 2h10a2 2 0 002-2v-6a2 2 0 00-2-2h-.5V5.5A4.5 4.5 0 0010 1zm3 8V5.5a3 3 0 10-6 0V9h6z" clip-rule="evenodd" />
               </svg>
-              <span><strong class="font-semibold text-gray-900">SSL certificates.</strong> Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo.</span>
+              <span><strong class="font-semibold text-white">SSL certificates.</strong> Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo.</span>
             </li>
             <li class="flex gap-x-3">
-              <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <svg class="mt-1 h-5 w-5 flex-none text-primary" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                 <path d="M4.632 3.533A2 2 0 016.577 2h6.846a2 2 0 011.945 1.533l1.976 8.234A3.489 3.489 0 0016 11.5H4c-.476 0-.93.095-1.344.267l1.976-8.234z" />
                 <path fill-rule="evenodd" d="M4 13a2 2 0 100 4h12a2 2 0 100-4H4zm11.24 2a.75.75 0 01.75-.75H16a.75.75 0 01.75.75v.01a.75.75 0 01-.75.75h-.01a.75.75 0 01-.75-.75V15zm-2.25-.75a.75.75 0 00-.75.75v.01c0 .414.336.75.75.75H13a.75.75 0 00.75-.75V15a.75.75 0 00-.75-.75h-.01z" clip-rule="evenodd" />
               </svg>
-              <span><strong class="font-semibold text-gray-900">Database backups.</strong> Ac tincidunt sapien vehicula erat auctor pellentesque rhoncus. Et magna sit morbi lobortis.</span>
+              <span><strong class="font-semibold text-white">Database backups.</strong> Ac tincidunt sapien vehicula erat auctor pellentesque rhoncus. Et magna sit morbi lobortis.</span>
             </li>
           </ul>
           <p class="mt-8">Et vitae blandit facilisi magna lacus commodo. Vitae sapien duis odio id et. Id blandit molestie auctor fermentum dignissim. Lacus diam tincidunt ac cursus in vel. Mauris varius vulputate et ultrices hac adipiscing egestas. Iaculis convallis ac tempor et ut. Ac lorem vel integer orci.</p>
-          <h2 class="mt-16 text-2xl font-bold tracking-tight text-gray-900">No server? No problem.</h2>
+          <h2 class="mt-16 text-2xl font-bold tracking-tight text-white">No server? No problem.</h2>
           <p class="mt-6">Id orci tellus laoreet id ac. Dolor, aenean leo, ac etiam consequat in. Convallis arcu ipsum urna nibh. Pharetra, euismod vitae interdum mauris enim, consequat vulputate nibh. Maecenas pellentesque id sed tellus mauris, ultrices mauris. Tincidunt enim cursus ridiculus mi. Pellentesque nam sed nullam sed diam turpis ipsum eu a sed convallis diam.</p>
         </div>
       </div>
@@ -92,14 +92,14 @@ import Header from "../components/Header.astro";
               <blockquote class="mt-6 text-xl font-semibold leading-8 text-white">
                 <p>“Amet amet eget scelerisque tellus sit neque faucibus non eleifend. Integer eu praesent at a. Ornare arcu gravida natoque erat et cursus tortor.”</p>
               </blockquote>
-              <figcaption class="mt-6 text-sm leading-6 text-gray-300"><strong class="font-semibold text-white">Judith Rogers,</strong> CEO at Workcation</figcaption>
+              <figcaption class="mt-6 text-sm leading-6 text-white"><strong class="font-semibold text-white">Judith Rogers,</strong> CEO at Workcation</figcaption>
             </figure>
           </div>
         </div>
         <div>
           <div class="text-base leading-7 text-gray-700 lg:max-w-lg">
-            <p class="text-base font-semibold leading-7 text-indigo-600">Company values</p>
-            <h1 class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">On a mission to empower remote teams</h1>
+            <p class="text-base font-semibold leading-7 text-primary">Company values</p>
+            <h1 class="mt-2 text-3xl font-bold tracking-tight text-white sm:text-4xl">On a mission to empower remote teams</h1>
             <div class="max-w-xl">
               <p class="mt-6">Faucibus commodo massa rhoncus, volutpat. Dignissim sed eget risus enim. Mattis mauris semper sed amet vitae sed turpis id. Id dolor praesent donec est. Odio penatibus risus viverra tellus varius sit neque erat velit. Faucibus commodo massa rhoncus, volutpat. Dignissim sed eget risus enim. Mattis mauris semper sed amet vitae sed turpis id.</p>
               <p class="mt-8">Et vitae blandit facilisi magna lacus commodo. Vitae sapien duis odio id et. Id blandit molestie auctor fermentum dignissim. Lacus diam tincidunt ac cursus in vel. Mauris varius vulputate et ultrices hac adipiscing egestas. Iaculis convallis ac tempor et ut. Ac lorem vel integer orci.</p>
@@ -108,24 +108,24 @@ import Header from "../components/Header.astro";
           </div>
           <dl class="mt-10 grid grid-cols-2 gap-8 border-t border-gray-900/10 pt-10 sm:grid-cols-4">
             <div>
-              <dt class="text-sm font-semibold leading-6 text-gray-600">Founded</dt>
-              <dd class="mt-2 text-3xl font-bold leading-10 tracking-tight text-gray-900">2021</dd>
+              <dt class="text-sm font-semibold leading-6 text-white">Founded</dt>
+              <dd class="mt-2 text-3xl font-bold leading-10 tracking-tight text-white">2021</dd>
             </div>
             <div>
-              <dt class="text-sm font-semibold leading-6 text-gray-600">Employees</dt>
-              <dd class="mt-2 text-3xl font-bold leading-10 tracking-tight text-gray-900">37</dd>
+              <dt class="text-sm font-semibold leading-6 text-white">Employees</dt>
+              <dd class="mt-2 text-3xl font-bold leading-10 tracking-tight text-white">37</dd>
             </div>
             <div>
-              <dt class="text-sm font-semibold leading-6 text-gray-600">Countries</dt>
-              <dd class="mt-2 text-3xl font-bold leading-10 tracking-tight text-gray-900">12</dd>
+              <dt class="text-sm font-semibold leading-6 text-white">Countries</dt>
+              <dd class="mt-2 text-3xl font-bold leading-10 tracking-tight text-white">12</dd>
             </div>
             <div>
-              <dt class="text-sm font-semibold leading-6 text-gray-600">Raised</dt>
-              <dd class="mt-2 text-3xl font-bold leading-10 tracking-tight text-gray-900">$25M</dd>
+              <dt class="text-sm font-semibold leading-6 text-white">Raised</dt>
+              <dd class="mt-2 text-3xl font-bold leading-10 tracking-tight text-white">$25M</dd>
             </div>
           </dl>
           <div class="mt-10 flex">
-            <a href="#" class="text-base font-semibold leading-7 text-indigo-600">Learn more about our company <span aria-hidden="true">&rarr;</span></a>
+            <a href="#" class="text-base font-semibold leading-7 text-primary">Learn more about our company <span aria-hidden="true">&rarr;</span></a>
           </div>
         </div>
       </div>
