New comp added from shortcut

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 ---
 
 ---
-<footer class=" bg-black sm:mt-40" aria-labelledby="footer-heading">
+<footer class=" bg-black" aria-labelledby="footer-heading">
 	<h2 id="footer-heading" class="sr-only">Footer</h2>
 	<div class="mx-auto max-w-8xl px-6 pb-8 lg:px-8">
 	  <div class="border-t border-gray-900/10 pt-20 xl:grid xl:grid-cols-3 xl:gap-8">
