--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -103,7 +103,7 @@ const featured = [
 		<Header />
 		 <!-- Navigation Menu End -->
 		 <section class="bg-black ">
-			<div class="relative isolate overflow-hidden ">
+			<div class="relative isolate overflow-clip ">
 			  <div class="mx-auto max-w-8xl    lg:grid lg:grid-cols-2 lg:gap-x-8 lg:px-8 ">
 				<div class="px-6 lg:px-0 lg:pt-4">
 				  <div class="mx-auto max-w-2xl">
@@ -111,9 +111,9 @@ const featured = [
 
 					  <div class="mt-24 sm:mt-32 lg:mt-16">
 						<a href="#" class="inline-flex space-x-6">
-						  <span class="rounded-full  bg-primary/10 px-3 py-1 text-sm font-semibold leading-6 text-primary ring-1 ring-inset ring-primary/10">What's new</span>
-						  <span class="inline-flex items-center space-x-2 text-sm font-medium leading-6 text-white">
-							<span>Just shipped v0.1.0</span>
+						 
+						  <span class="inline-flex items-center space-x-2 text-lg font-bold leading-6 text-secondary ">
+							<span>#1 Platform in the wolrd just shipped v0.1.0</span>
 							<svg class="h-5 w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
 							  <path fill-rule="evenodd" d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z" clip-rule="evenodd" />
 							</svg>
@@ -158,9 +158,7 @@ const featured = [
 						<div class="video-embed w-full about-video position-relative">
 							<h1> Ask a question about your webiste</h1>
 							<input type="text" placeholder="Enter your question here" class="border w-full rounded-full py-2 px-2" />
-						   <div class="ratio ratio-16x9 rounded overflow-hidden">
-							
-						   </div>
+						 
 						</div>
 					 </div>
 					
@@ -323,7 +321,7 @@ const featured = [
   
 		
 
-		 <div class="bg-primary">
+		<div class="bg-primary">
   <div class="px-6 py-24 sm:px-6 sm:py-32 lg:px-8">
     <div class="mx-auto max-w-2xl text-center">
       <h2 class="text-3xl font-bold tracking-tight text-white sm:text-4xl">Boost your productivity.<br>Start using our app today.</h2>
