New comp added from shortcut

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -9,6 +9,8 @@ import FormattedDate from '../../components/FormattedDate.astro';
 const posts = (await getCollection('blog')).sort(
 	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
 );
+
+
 ---
 
 <!DOCTYPE html>
@@ -36,9 +38,9 @@ const posts = (await getCollection('blog')).sort(
 	<body>
 		<Header />
 		<main>
-			<div class="bg-white px-6 pt-24 sm:pt-32 lg:px-8">
+			<div class="bg-tertiary px-6 pt-24 sm:pt-32 lg:px-8">
 				<div class="mx-auto max-w-2xl text-center">
-				  <p class="text-base font-semibold leading-7 text-indigo-600">Get the help you need</p>
+				  <p class="text-base font-semibold leading-7 text-primary">Get the help you need</p>
 				  <h2 class="mt-2 text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Support center</h2>
 				  <p class="mt-6 text-lg leading-8 text-gray-600">Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua.</p>
 				</div>
@@ -58,17 +60,20 @@ const posts = (await getCollection('blog')).sort(
 					  </div>
 					  <div class="max-w-xl">
 						<div class="mt-8 flex items-center gap-x-4 text-xs">
-						  <time datetime="2020-03-16" class="text-gray-500">Mar 16, 2020</time>
-						  <a href="#" class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100">Marketing</a>
+						  <time datetime="2020-03-16" class="text-gray-500">{new Date(post.data.pubDate).toDateString(
+							
+
+						  )}</time>
+						  <a href="#" class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100">{post.collection}</a>
 						</div>
 						<div class="group relative">
 						  <h3 class="mt-3 text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
 							<a href="#">
 							  <span class="absolute inset-0"></span>
-							  Boost your conversion rate
+							  {post.data.title}
 							</a>
 						  </h3>
-						  <p class="mt-5 line-clamp-3 text-sm leading-6 text-gray-600">Illo sint voluptas. Error voluptates culpa eligendi. Hic vel totam vitae illo. Non aliquid explicabo necessitatibus unde. Sed exercitationem placeat consectetur nulla deserunt vel. Iusto corrupti dicta.</p>
+						  <p class="mt-5 line-clamp-3 text-sm leading-6 text-gray-600">{post.body}</p>
 						</div>
 						<div class="relative mt-8 flex items-center gap-x-4">
 						  <img src="https://images.unsplash.com/photo-1519244703995-f4e0f30006d5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="" class="h-10 w-10 rounded-full bg-gray-100">
@@ -92,23 +97,7 @@ const posts = (await getCollection('blog')).sort(
 			  
 			  
 
-	
-			<section>
-				<div class="bg-tertiary py-24 sm:py-32">
-					<div class="mx-auto max-w-8xl px-6 lg:px-8">
-					  <div class="mx-auto max-w-2xl lg:max-w-4xl">
-						<h2 class="text-3xl font-bold tracking-tight text-black sm:text-4xl">Featured Insights</h2>
-						<p class="mt-2 text-lg leading-8 text-black">Learn how to grow your business with our expert advice.</p>
-						<div class="mt-16 space-y-20 lg:mt-20 lg:space-y-20">
-						
 
-						 
-						</div>
-					  </div>
-					</div>
-				  </div>
-				  
-			</section>
 		</main>
 		<Footer />
 	</body>
