--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -30,9 +30,9 @@ import Header from "../components/Header.astro";
 		<div class="absolute inset-y-0 right-1/2 -z-10 -mr-96 w-[200%] origin-top-right skew-x-[-30deg] bg-white shadow-xl shadow-primary/10 ring-1 ring-indigo-50 sm:-mr-80 lg:-mr-96" aria-hidden="true"></div>
 		<div class="mx-auto max-w-8xl px-6 py-32 sm:py-40 lg:px-8">
 		  <div class="mx-auto max-w-2xl lg:mx-0 lg:grid lg:max-w-none lg:grid-cols-2 lg:gap-x-16 lg:gap-y-6 xl:grid-cols-1 xl:grid-rows-1 xl:gap-x-8">
-			<h1 class="max-w-2xl text-4xl font-bold tracking-tight text-white sm:text-6xl lg:col-span-2 xl:col-auto">Ware a passionate group of people working from around the world to build the future of ecommerce.</h1>
+			<h1 class="max-w-2xl text-4xl font-bold tracking-tight text-black sm:text-6xl lg:col-span-2 xl:col-auto">Ware a passionate group of people working from around the world to build the future of ecommerce.</h1>
 			<div class="mt-6 max-w-xl lg:mt-0 xl:col-end-1 xl:row-start-1">
-			  <p class="text-lg leading-8 text-white">Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua. Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo.</p>
+			  <p class="text-lg leading-8 text-black">Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua. Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo.</p>
 			</div>
 			<img src="https://images.unsplash.com/photo-1567532900872-f4e906cbf06a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1280&q=80" alt="" class="mt-10 aspect-[6/5] w-full max-w-lg rounded-2xl object-cover sm:mt-16 lg:mt-0 lg:max-w-none xl:row-span-2 xl:row-end-2 xl:mt-36">
 		  </div>
@@ -52,7 +52,7 @@ import Header from "../components/Header.astro";
 			  <div class="absolute -ml-2 h-px w-screen -translate-x-full bg-gray-900/10 sm:-ml-4 lg:static lg:-mr-6 lg:ml-8 lg:w-auto lg:flex-auto lg:translate-x-0" aria-hidden="true"></div>
 			</time>
 			<p class="mt-6 text-lg font-semibold leading-8 tracking-tight text-white">Founded company</p>
-			<p class="mt-1 text-base leading-7 text-white">Nihil aut nam. Dignissimos a pariatur et quos omnis. Aspernatur asperiores et dolorem dolorem optio voluptate repudiandae.</p>
+			<p class="mt-1 text-base leading-7 text-black">Nihil aut nam. Dignissimos a pariatur et quos omnis. Aspernatur asperiores et dolorem dolorem optio voluptate repudiandae.</p>
 		  </div>
 		  <div>
 			<time datetime="2021-12" class="flex items-center text-sm font-semibold leading-6 text-primary">
@@ -62,8 +62,8 @@ import Header from "../components/Header.astro";
 			  Dec 2021
 			  <div class="absolute -ml-2 h-px w-screen -translate-x-full bg-gray-900/10 sm:-ml-4 lg:static lg:-mr-6 lg:ml-8 lg:w-auto lg:flex-auto lg:translate-x-0" aria-hidden="true"></div>
 			</time>
-			<p class="mt-6 text-lg font-semibold leading-8 tracking-tight text-white">Secured $65m in funding</p>
-			<p class="mt-1 text-base leading-7 text-white">Provident quia ut esse. Vero vel eos repudiandae aspernatur. Cumque minima impedit sapiente a architecto nihil.</p>
+			<p class="mt-6 text-lg font-semibold leading-8 tracking-tight text-black">Secured $65m in funding</p>
+			<p class="mt-1 text-base leading-7 text-black">Provident quia ut esse. Vero vel eos repudiandae aspernatur. Cumque minima impedit sapiente a architecto nihil.</p>
 		  </div>
 		  <div>
 			<time datetime="2022-02" class="flex items-center text-sm font-semibold leading-6 text-primary">
@@ -73,8 +73,8 @@ import Header from "../components/Header.astro";
 			  Feb 2022
 			  <div class="absolute -ml-2 h-px w-screen -translate-x-full bg-gray-900/10 sm:-ml-4 lg:static lg:-mr-6 lg:ml-8 lg:w-auto lg:flex-auto lg:translate-x-0" aria-hidden="true"></div>
 			</time>
-			<p class="mt-6 text-lg font-semibold leading-8 tracking-tight text-white">Released beta</p>
-			<p class="mt-1 text-base leading-7 text-white">Sunt perspiciatis incidunt. Non necessitatibus aliquid. Consequatur ut officiis earum eum quia facilis. Hic deleniti dolorem quia et.</p>
+			<p class="mt-6 text-lg font-semibold leading-8 tracking-tight text-black">Released beta</p>
+			<p class="mt-1 text-base leading-7 text-black">Sunt perspiciatis incidunt. Non necessitatibus aliquid. Consequatur ut officiis earum eum quia facilis. Hic deleniti dolorem quia et.</p>
 		  </div>
 		  <div>
 			<time datetime="2022-12" class="flex items-center text-sm font-semibold leading-6 text-primary">
@@ -84,8 +84,8 @@ import Header from "../components/Header.astro";
 			  Dec 2022
 			  <div class="absolute -ml-2 h-px w-screen -translate-x-full bg-gray-900/10 sm:-ml-4 lg:static lg:-mr-6 lg:ml-8 lg:w-auto lg:flex-auto lg:translate-x-0" aria-hidden="true"></div>
 			</time>
-			<p class="mt-6 text-lg font-semibold leading-8 tracking-tight text-white">Global launch of product</p>
-			<p class="mt-1 text-base leading-7 text-white">Ut ipsa sint distinctio quod itaque nam qui. Possimus aut unde id architecto voluptatem hic aut pariatur velit.</p>
+			<p class="mt-6 text-lg font-semibold leading-8 tracking-tight text-black">Global launch of product</p>
+			<p class="mt-1 text-base leading-7 text-black">Ut ipsa sint distinctio quod itaque nam qui. Possimus aut unde id architecto voluptatem hic aut pariatur velit.</p>
 		  </div>
 		</div>
 	  </div>
@@ -113,9 +113,9 @@ import Header from "../components/Header.astro";
 		<div class="mx-auto max-w-8xl px-6 lg:flex lg:px-8">
 		  <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-12 gap-y-16 lg:mx-0 lg:min-w-full lg:max-w-none lg:flex-none lg:gap-y-8">
 			<div class="lg:col-end-1 lg:w-full lg:max-w-lg lg:pb-8">
-			  <h2 class="text-3xl font-bold tracking-tight text-white sm:text-4xl">Our people</h2>
-			  <p class="mt-6 text-xl leading-8 text-white">Quasi est quaerat. Sit molestiae et. Provident ad dolorem occaecati eos iste. Soluta rerum quidem minus ut molestiae velit error quod. Excepturi quidem expedita molestias quas.</p>
-			  <p class="mt-6 text-base leading-7 text-white">Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat. Quasi aperiam sit non sit neque reprehenderit.</p>
+			  <h2 class="text-3xl font-bold tracking-tight text-black sm:text-4xl">Our people</h2>
+			  <p class="mt-6 text-xl leading-8 text-black">Quasi est quaerat. Sit molestiae et. Provident ad dolorem occaecati eos iste. Soluta rerum quidem minus ut molestiae velit error quod. Excepturi quidem expedita molestias quas.</p>
+			  <p class="mt-6 text-base leading-7 text-black">Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat. Quasi aperiam sit non sit neque reprehenderit.</p>
 			</div>
 			<div class="flex flex-wrap items-start justify-end gap-6 sm:gap-8 lg:contents">
 			  <div class="w-0 flex-auto lg:ml-auto lg:w-auto lg:flex-none lg:self-end">
@@ -140,15 +140,15 @@ import Header from "../components/Header.astro";
 	  <!-- Stats -->
 	  <div class="mx-auto mt-32 max-w-8xl px-6 sm:mt-40 lg:px-8">
 		<div class="mx-auto max-w-2xl lg:mx-0">
-		  <h2 class="text-3xl font-bold tracking-tight text-white sm:text-4xl">We approach the workplace as something that adds to our lives and adds value to world.</h2>
+		  <h2 class="text-3xl font-bold tracking-tight text-black sm:text-4xl">We approach the workplace as something that adds to our lives and adds value to world.</h2>
 		  <p class="mt-6 text-base leading-7 text-white">Diam nunc lacus lacus aliquam turpis enim. Eget hac velit est euismod lacus. Est non placerat nam arcu. Cras purus nibh cursus sit eu in id. Integer vel nibh.</p>
 		</div>
 		<div class="mx-auto mt-16 flex max-w-2xl flex-col gap-8 lg:mx-0 lg:mt-20 lg:max-w-none lg:flex-row lg:items-end">
-		  <div class="flex flex-col-reverse justify-between gap-x-16 gap-y-8 rounded-2xl bg-gray-50 p-8 sm:w-3/4 sm:max-w-md sm:flex-row-reverse sm:items-end lg:w-72 lg:max-w-none lg:flex-none lg:flex-col lg:items-start">
-			<p class="flex-none text-3xl font-bold tracking-tight text-white">250k</p>
+		  <div class="flex flex-col-reverse justify-between gap-x-16 gap-y-8 rounded-2xl bg-tertiary p-8 sm:w-3/4 sm:max-w-md sm:flex-row-reverse sm:items-end lg:w-72 lg:max-w-none lg:flex-none lg:flex-col lg:items-start">
+			<p class="flex-none text-3xl font-bold tracking-tight text-black">250k</p>
 			<div class="sm:w-80 sm:shrink lg:w-auto lg:flex-none">
-			  <p class="text-lg font-semibold tracking-tight text-white">Users on the platform</p>
-			  <p class="mt-2 text-base leading-7 text-white">Vel labore deleniti veniam consequuntur sunt nobis.</p>
+			  <p class="text-lg font-semibold tracking-tight text-black">Users on the platform</p>
+			  <p class="mt-2 text-base leading-7 text-black">Vel labore deleniti veniam consequuntur sunt nobis.</p>
 			</div>
 		  </div>
 		  <div class="flex flex-col-reverse justify-between gap-x-16 gap-y-8 rounded-2xl bg-gray-900 p-8 sm:flex-row-reverse sm:items-end lg:w-full lg:max-w-sm lg:flex-auto lg:flex-col lg:items-start lg:gap-y-44">
@@ -169,11 +169,11 @@ import Header from "../components/Header.astro";
 	  </div>
   
 	  <!-- Content section -->
-	  <div class="mx-auto mt-32 max-w-8xl px-6 sm:mt-40 lg:px-8">
+	  <div class="mx-auto mt-32 py-24 max-w-8xl px-6 sm:mt-40 lg:px-8">
 		<div class="mx-auto flex max-w-2xl flex-col items-end justify-between gap-16 lg:mx-0 lg:max-w-none lg:flex-row">
 		  <div class="w-full lg:max-w-lg lg:flex-auto">
-			<h2 class="text-3xl font-bold tracking-tight text-white sm:text-4xl">We’re always looking for awesome people to join us</h2>
-			<p class="mt-6 text-xl leading-8 text-white">Diam nunc lacus lacus aliquam turpis enim. Eget hac velit est euismod lacus. Est non placerat nam arcu. Cras purus nibh cursus sit eu in id.</p>
+			<h2 class="text-3xl font-bold tracking-tight text-black sm:text-4xl">We’re always looking for awesome people to join us</h2>
+			<p class="mt-6 text-xl leading-8 text-black">Diam nunc lacus lacus aliquam turpis enim. Eget hac velit est euismod lacus. Est non placerat nam arcu. Cras purus nibh cursus sit eu in id.</p>
 			<img src="https://images.unsplash.com/photo-1606857521015-7f9fcf423740?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1344&h=1104&q=80" alt="" class="mt-16 aspect-[6/5] w-full rounded-2xl bg-gray-50 object-cover lg:aspect-auto lg:h-[34.5rem]">
 		  </div>
 		  <div class="w-full lg:max-w-xl lg:flex-auto">
@@ -182,18 +182,18 @@ import Header from "../components/Header.astro";
 			  <li class="py-8">
 				<dl class="relative flex flex-wrap gap-x-3">
 				  <dt class="sr-only">Role</dt>
-				  <dd class="w-full flex-none text-lg font-semibold tracking-tight text-white">
+				  <dd class="w-full flex-none text-lg font-semibold tracking-tight text-black">
 					<a href="#">
 					  Full-time designer
 					  <span class="absolute inset-0" aria-hidden="true"></span>
 					</a>
 				  </dd>
 				  <dt class="sr-only">Description</dt>
-				  <dd class="mt-2 w-full flex-none text-base leading-7 text-white">Quos sunt ad dolore ullam qui. Enim et quisquam dicta molestias. Corrupti quo voluptatum eligendi autem labore.</dd>
+				  <dd class="mt-2 w-full flex-none text-base leading-7 text-black">Quos sunt ad dolore ullam qui. Enim et quisquam dicta molestias. Corrupti quo voluptatum eligendi autem labore.</dd>
 				  <dt class="sr-only">Salary</dt>
-				  <dd class="mt-4 text-base font-semibold leading-7 text-white">$75,000 USD</dd>
+				  <dd class="mt-4 text-base font-semibold leading-7 text-black">$75,000 USD</dd>
 				  <dt class="sr-only">Location</dt>
-				  <dd class="mt-4 flex items-center gap-x-3 text-base leading-7 text-white">
+				  <dd class="mt-4 flex items-center gap-x-3 text-base leading-7 text-black">
 					<svg viewBox="0 0 2 2" class="h-0.5 w-0.5 flex-none fill-gray-300" aria-hidden="true">
 					  <circle cx="1" cy="1" r="1" />
 					</svg>
