New comp added from shortcut

--- a/src/pages/automations.astro
+++ b/src/pages/automations.astro
@@ -1,6 +1,7 @@
 ---
 import AddOns from "../components/AddOns.astro";
 import CTA from "../components/CTA.astro";
+import Card from "../components/Card.astro";
 import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 ---
@@ -14,6 +15,7 @@ import Header from "../components/Header.astro";
     </div>
     <div class="mx-auto max-w-8xl px-6 lg:px-8">
         <div class="mx-auto max-w-2xl lg:mx-0">
+
           <h1 class="mt-2 text-3xl font-bold tracking-tight text-white sm:text-5xl">Automations</h1>
           <p class="mt-6 text-xl leading-8 text-gray-700">TecPlus drives innovation by providing cutting-edge software solutions. Our focus on design systems, product development, and API platform development has earned us recognition in the tech industry across the United States.</p>
         </div>
@@ -71,7 +73,6 @@ import Header from "../components/Header.astro";
       </div>
       
   </div>
-  
 
 
   <div class="bg-white py-24 sm:py-32">
