--- a/src/pages/product-design.astro
+++ b/src/pages/product-design.astro
@@ -1,6 +1,7 @@
 ---
 import AddOns from "../components/AddOns.astro";
 import CTA from "../components/CTA.astro";
+import Card from "../components/Card.astro";
 import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 ---
@@ -14,6 +15,7 @@ import Header from "../components/Header.astro";
     </div>
     <div class="mx-auto max-w-8xl px-6 lg:px-8">
         <div class="mx-auto max-w-2xl lg:mx-0">
+            
           <h1 class="mt-2 text-3xl font-bold tracking-tight text-black sm:text-5xl">Product Design</h1>
           <p class="mt-6 text-xl leading-8 text-gray-700">TecPlus drives innovation by providing cutting-edge product design solutions. Our focus on design systems, product development, and API platform development has earned us recognition in the tech industry across the United States.</p>
         </div>
@@ -78,6 +80,7 @@ import Header from "../components/Header.astro";
     <div class="mx-auto max-w-8xl px-6 lg:px-8">
       <div class="mx-auto grid max-w-2xl grid-cols-1 items-start gap-x-8 gap-y-16 sm:gap-y-24 lg:mx-0 lg:max-w-none lg:grid-cols-2">
         <div class="lg:pr-4">
+            <Card />
           <div class="relative overflow-hidden rounded-3xl bg-gray-900 px-6 pb-9 pt-64 shadow-2xl sm:px-12 lg:max-w-lg lg:px-8 lg:pb-8 xl:px-10 xl:pb-10">
             <img class="absolute inset-0 h-full w-full object-cover brightness-125 saturate-0" src="https://images.unsplash.com/photo-1630569267625-157f8f9d1a7e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2669&q=80" alt="">
             <div class="absolute inset-0 bg-gray-900 mix-blend-multiply"></div>
