New comp added from shortcut

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -73,7 +73,7 @@
 				  </svg>
 				</div>
 				<div class="flex-auto">
-				  <a href="#" class="block font-bold text-primary">
+				  <a href="#" class="block font-bold text-black">
 					Security
 					<span class="absolute inset-0"></span>
 				  </a>
@@ -87,7 +87,7 @@
 				  </svg>
 				</div>
 				<div class="flex-auto">
-				  <a href="/staffing" class="block font-bold text-primary">
+				  <a href="/staffing" class="block font-bold text-black">
 					Staffing
 					<span class="absolute inset-0"></span>
 				  </a>
@@ -101,7 +101,7 @@
 				  </svg>
 				</div>
 				<div class="flex-auto">
-				  <a href="/automations" class="block font-bold text-primary">
+				  <a href="/automations" class="block font-bold text-black">
 					E-commerce Automations
 					<span class="absolute inset-0"></span>
 				  </a>
