--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,11 +27,11 @@ const solutions = [
         "description": "Utilizing React Native, we create feature-rich, cross-platform mobile applications that provide a seamless and engaging user experience.",
         "targetAudience": "Enterprises, Government Entities"
     },
-    {
-        "title": "CMS Integration",
-        "description": "We specialize in integrating and customizing powerful content management systems like WordPress and Sanity, empowering you to manage your digital content effectively.",
-        "targetAudience": "Enterprises, Government Entities"
-    },
+    // {
+    //     "title": "CMS Integration",
+    //     "description": "We specialize in integrating and customizing powerful content management systems like WordPress and Sanity, empowering you to manage your digital content effectively.",
+    //     "targetAudience": "Enterprises, Government Entities"
+    // },
     {
         "title": "Website Performance Optimization",
         "description": "Our optimization solutions ensure your website or web app delivers a fast, smooth user experience, crucial for user satisfaction and conversion rates.",
@@ -100,7 +100,7 @@ const featured = [
 		<!-- Navigation Menu Start -->
 		<Header />
 		 <!-- Navigation Menu End -->
-		 <section class="bg-black ">
+		 <section class="bg-black py-24">
 			<div class="relative isolate overflow-clip ">
 			  <div class="mx-auto max-w-8xl    lg:grid lg:grid-cols-2 lg:gap-x-8 lg:px-8 ">
 				<div class="px-6 lg:px-0 lg:pt-4">
@@ -134,7 +134,8 @@ With recognition of our work in UX/UI, product development, and API platform dev
 				  </div>
 				</div>
 				<div class="mt-20  md:mx-auto md:max-w-2xl lg:mx-0 lg:mt-0 lg:w-screen">
-		
+					<!-- <script type="module" src="https://unpkg.com/@splinetool/viewer@0.9.370/build/spline-viewer.js"></script>
+<spline-viewer hint loading-anim url="https://prod.spline.design/7gsemxrLfgzBWvij/scene.splinecode"></spline-viewer> -->
 				  <div class="">
 					<lottie-player class="max-w-md lg:max-w-4xl" src="https://assets9.lottiefiles.com/packages/lf20_myejiggj.json"  background="transparent"  speed="0.5"  style="width: 700px; height: 700px;"  loop  autoplay></lottie-player>
 				  </div>
@@ -188,7 +189,7 @@ With recognition of our work in UX/UI, product development, and API platform dev
 		 <!-- About Section End -->
 		 <section class="bg-tertiary w-full">
 
-		 <div class="grid grid-cols-4 bg-tertiary mx-auto max-w-8xl pb-24 pt-10 lg:gap-x-8 lg:px-8">
+		 <div class="grid grid-cols-4 gap-12 bg-tertiary mx-auto max-w-8xl pb-24 pt-10 lg:gap-x-8 lg:px-8">
 			{solutions.map((solution) => (
 
 				<div class="feature-box mt-4 mt-lg-5">
