New comp added from shortcut

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -5,10 +5,20 @@ import Footer from '../../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
 import { getCollection } from 'astro:content';
 import FormattedDate from '../../components/FormattedDate.astro';
+import { useSanityClient, groq } from 'astro-sanity';
 
-const posts = (await getCollection('blog')).sort(
-	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
-);
+
+
+const query = groq`*[_type == "post"] {
+    ...,
+    'authorName': author->name,
+    'mainImageUrl': mainImage.asset->url,
+    'categoryList': categories[]->title,
+  }`;
+  	const posts = await useSanityClient().fetch(query);
+  	console.log(posts);
+
+	
 
 
 ---
@@ -47,30 +57,35 @@ const posts = (await getCollection('blog')).sort(
 			  </div>
 
 
+
 			  <div class="bg-tertiary py-12 ">
 				<div class="mx-auto max-w-7xl px-6 lg:px-8">
-				
-
 				  <div class="mx-auto mt-16 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-3">
-					{posts.map((post) => (
+
+					
+					{posts?.map((post) => (
 					<article class="flex flex-col items-start justify-between">
 					  <div class="relative w-full">
-						<img src={post.data.heroImage} alt="" class="aspect-[16/9] w-full rounded-2xl bg-gray-100 object-cover sm:aspect-[2/1] lg:aspect-[3/2]">
+						<img src={post.mainImageUrl} alt="" class="aspect-[16/9] w-full rounded-2xl bg-gray-100 object-cover sm:aspect-[2/1] lg:aspect-[3/2]">
 						<div class="absolute inset-0 rounded-2xl ring-1 ring-inset ring-gray-900/10"></div>
 					  </div>
 					  <div class="max-w-xl">
 						<div class="mt-8 flex items-center gap-x-4 text-xs">
-						  <time datetime="2020-03-16" class="text-gray-500">{new Date(post.data.pubDate).toDateString(
+						  <time datetime="2020-03-16" class="text-gray-500">{new Date(post.publishedAt).toDateString(
 							
 
 						  )}</time>
-						  <a href="#" class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100">{post.collection}</a>
+						  {post.categoryList.map(() => {
+							  <a href="#" class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100">something</a>
+						  })
+						  }
+				
 						</div>
 						<div class="group relative">
 						  <h3 class="mt-3 text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
-							<a href={`/blog/${post.slug}`}>
+							<a href={`/blog/${post.slug.current}`}>
 							  <span class="absolute inset-0"></span>
-							  {post.data.title}
+							  {post.title}
 							</a>
 						  </h3>
 						  <p class="mt-5 line-clamp-3 text-sm leading-6 text-gray-600">{post.body}</p>
