--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -3,7 +3,7 @@ import type { CollectionEntry } from 'astro:content';
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
-import FormattedDate from '../components/FormattedDate.astro';
+// import FormattedDate from '../components/FormattedDate.astro';
 
 type Props = CollectionEntry<'blog'>['data'];
 
@@ -41,14 +41,14 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 					<div class="mx-auto max-w-3xl text-base leading-7 text-gray-700">
 						<p class="text-base font-semibold leading-7 text-primary">Introducing</p>
 						<h1 class="mt-2 text-3xl font-bold tracking-tight text-white sm:text-4xl">{title}</h1>
-						<FormattedDate date={pubDate} />
+						<!-- <FormattedDate date={pubDate} />
 						{
 							updatedDate && (
 								<div class="last-updated-on">
 									Last updated on <FormattedDate date={updatedDate} />
 									</div>
 									)
-								}
+								} -->
 								<div class="prose">
 
 									<slot />
